feat: Add laser controls and animal highlighter to left hand entity for enhanced interaction

--- a/index.html
+++ b/index.html
@@ -477,6 +477,10 @@
         <a-entity
           id="leftHand"
           hand-controls="hand: left; handModelStyle: lowPoly; color: #ffccaa"
+          laser-controls="hand: left"
+          raycaster="objects: .clickable, .animal; far: 20"
+          line="color: #00FF00; opacity: 0.75"
+          animal-highlighter
           progress-ui
         >
           <!-- Wristwatch UI Container -->
