feat: Enhance orb interaction with hover and click color feedback for improved user experience

--- a/index.html
+++ b/index.html
@@ -282,19 +282,16 @@
       <!-- Safari Game Control Orbs -->
       <a-entity id="carteles" position="0 1.5 -5">
         <!-- Safari Cartel -->
-        <a-entity
-          id="startCartel"
-          shadow="receive: false"
-          class="clickable orb-start"
-          position="-4.5 0 0"
-        >
+        <a-entity id="startCartel" shadow="receive: false" position="-4.5 0 0">
           <a-image
             id="startCartelImg"
+            class="clickable orb-start"
             src="#cartelSafari"
             position="0 0 0"
             width="1"
             height="1.4"
             shadow="cast: true"
+            material="shader: flat; transparent: true"
             orb-controller
           ></a-image>
           <a-box
@@ -1385,9 +1382,54 @@
         // Orb Controller - Handle orb clicks
         AFRAME.registerComponent("orb-controller", {
           init: function () {
+            this.originalColor = null;
+            this.isClicked = false;
+
+            // Store original material color
+            const material = this.el.getAttribute("material");
+            if (material && material.color) {
+              this.originalColor = material.color;
+            }
+
+            // Yellow highlight on hover
+            this.el.addEventListener("mouseenter", () => {
+              if (!this.isClicked) {
+                this.el.setAttribute("material", "color", "#FFFF00");
+              }
+            });
+
+            this.el.addEventListener("mouseleave", () => {
+              if (!this.isClicked) {
+                if (this.originalColor) {
+                  this.el.setAttribute("material", "color", this.originalColor);
+                } else {
+                  this.el.setAttribute("material", "color", "#FFFFFF");
+                }
+              }
+            });
+
+            // Green highlight and trigger on click
             this.el.addEventListener("click", () => {
               if (this.el.classList.contains("orb-start")) {
+                this.isClicked = true;
+                this.el.setAttribute("material", "color", "#00FF00");
+
+                // Emit game start event
                 this.el.sceneEl.emit("safari-start-game");
+
+                // Reset color after a moment
+                setTimeout(() => {
+                  this.isClicked = false;
+                  if (this.originalColor) {
+                    this.el.setAttribute(
+                      "material",
+                      "color",
+                      this.originalColor
+                    );
+                  } else {
+                    this.el.setAttribute("material", "color", "#FFFFFF");
+                  }
+                }, 1000);
               }
             });
           },
