--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
     <div class="hint">
       WASD / arrow keys to move, mouse to look. In VR, use thumbsticks to move
-      and controllers to point. Explore the forest! Hands
+      and controllers to point. Explore the forest! highlight
     </div>
 
     <!-- fog="type: exponential; color: #FFD178; density: 0.02"-->>
