fix: Correct spelling of 'Cubito' to 'Cubitoi' and adjust box scale for better visibility

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
     <div class="hint">
       WASD / arrow keys to move, mouse to look. In VR, use thumbsticks to move
-      and controllers to point. Explore the forest! Cubito
+      and controllers to point. Explore the forest! Cubitoi
     </div>
 
     <!-- fog="type: exponential; color: #FFD178; density: 0.02"-->>
@@ -494,7 +494,7 @@
               height="0.24"
               material="shader: flat; transparent: true"
             ></a-plane>
-            <a-box position="0 0 0" scale="0.5 1 2"></a-box>
+            <a-box position="0 0 0" scale="0.1 0.2 0.05"></a-box>
 
             <!-- Animal Icon Slots (positioned on the tracker) -->
             <!-- Flamingo - Top Left -->
